--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
-  "name": "skeletor.component-loader",
-  "main": "skeletor.component-loader.js",
-  "homepage": "https://github.com/delphic-digital/Skeletor.component-loader",
+  "name": "skeletor.util.componentLoader",
+  "main": "skeletor.util.componentLoader.js",
+  "homepage": "https://github.com/delphic-digital/Skeletor.util.componentLoader",
   "authors": [
     "Jeff <jmills@delphicdigital.com>"
   ],
